a melyik puzzle előkitöltésébe még betettem a random összeget is, hogy lássák nem kötelező puzzle-t venni.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             type="text"
             id="konstrukt"
             name="konstrukt"
-            placeholder="jegy / próba / teljes pakk / ebéd & körbevezetés"
+            placeholder="jegy / próba / teljes pakk / ebéd & körbevezetés / random összeg"
             required
           />
 
