change puzzle text

--- a/IMeFeszt/wwwroot/index.html
+++ b/IMeFeszt/wwwroot/index.html
@@ -111,10 +111,12 @@
           <img class="icon" src="images/puzzle-piece.png" alt="puzzle darab" />
           <h5>Ebád & körbevezetés</h5>
           <p>
-            Ez a konstruckió <b>40.000 Forintba kerül</b>, amiért valamelyik
-            kerületi csapat általad választott színésze elvisz ebédelni, mejd
-            együtt bementek a színházba körbevezet, beleláthatsz hogy is néznek
-            ki az előadás előtti készülődések, próbák és természetesen meg is
+            Ez a konstruckió <b>40.000 Forintba kerül</b>, amiért a
+            <a style="color: #fcae01" href="http://ter12.hu/" target="_blank">
+              Tér 12 Kulturális Egyesület</a>
+            elnöke, Viktor Balázs elvisz ebédelni, majd együtt bementek a
+            színházba, ahol jól körbevezet, ahol beleláthatsz hogy is néznek ki
+            az előadás előtti készülődések, próbák és természetesen meg is
             tekinthetd az adott előadást.
           </p>
           <div class="button"><a href="#jump">Érdekel</a></div>
